--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -16,18 +14,23 @@
     justify-content: flex-end;
     align-items: center;
     display: flex;
+    text-align: center;
     position: sticky;
     top: 0;
 }
 
 #navbar ul {
     display: flex;
+
+}
+
+#navbar li {
+    padding: 10px 20px;
 }
 
 #navbar li a {
     display: block;
-    align-items: center;
-    margin-right: 20px;
+    text-align: center;
     font-size: 1.5rem;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -35,7 +38,9 @@
 }
 
 #navbar li:hover {
-background-color: darkslategrey;
+    background-color: darkslategrey;
+    padding: 10px 20px;
+    cursor: pointer;
 }
 
 /* Hero section */
@@ -97,33 +102,34 @@ background-color: darkslategrey;
     object-fit: cover;
 }
 
-.project-title .prj-link{
-      background-color: #207504;
-      /* padding: 20px 40px; */
+.project-title .prj-link {
+    background-color: #207504;
+    /* padding: 20px 40px; */
     text-align: center;
-    padding:15px;
+    padding: 15px;
     cursor: pointer;
 }
-.prj-link a{
+
+.prj-link a {
     text-decoration: none;
     color: white;
     font-weight: 500;
     font-size: 1.25rem;
 }
 
-.prj-link:hover{
-background-color: #38ac11;
+.prj-link:hover {
+    background-color: #38ac11;
 }
 
 /* Contact section */
-#contact-section{
+#contact-section {
     background-color: cadetblue;
-    min-height:200px;
+    min-height: 200px;
     margin-top: 0;
 
 }
 
-#contact-header{
+#contact-header {
     text-align: center;
     padding: 20px;
     color: #207504;
@@ -132,39 +138,83 @@ background-color: #38ac11;
     margin-bottom: 0;
 }
 
-#contact-section> p{
+#contact-section>p {
     text-align: center;
     font-weight: bold;
     color: rgb(102, 18, 3);
     font-family: Helvetica, sans-serif;
-
 }
 
-.social-links{
-display: block;
-padding: 20px;
-width: 80%;
-margin: auto;
-
-}
-
-.social-links a{
-    float: left;
+.social-links {
+    display: block;
     padding: 20px;
+    /* width: 80%; */
+    margin: auto;
+    text-align: center;
+
+}
+
+.social-links .link {
+    display: inline-block;
+    padding: 10px;
     margin: auto;
     text-decoration: none;
     color: white;
     font-size: 1.3rem;
 }
 
-.social-links i{
+.social-links .link:hover {
+    color: #011647;
+}
+
+.social-links i {
     color: black;
     font-size: 1.3rem;
-    display: block;
+}
+
+.subscribe {
+    height: 150px;
+    background-color: rgb(5, 71, 71);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subscribe label {
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 400;
+    padding: 5px 10px;
+    text-align: center;
+}
+
+#email {
+    padding: 7px 5px;
+    width: 250px;
+    margin-top: 10px;
+    border-radius: 5px;
+    border: none;
+
+}
+
+.btn {
+    padding: 5px 25px;
+    font-weight: bold;
+    background-color: #207504;
+    border: none;
+    border-radius: 20px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #46ca1a;
+    color: rgb(0, 19, 19);
 }
 
 /* Footer section */
-#footer{
+#footer {
     background-color: black;
     color: white;
     clear: both;
@@ -177,11 +227,16 @@ margin: auto;
 /* Media query */
 
 @media only screen and (max-width: 720px) {
-    .social-links{
+    .social-links {
         display: flex;
         flex-direction: column;
         padding: 10px;
         margin: auto;
         text-align: center;
-       }
-  }
+    }
+
+    .prj-heading {
+        font-size: 1.3rem;
+    }
+
+}
