--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@
     text-decoration: none;
 }
 
+
+
 /* Top Header */
 .header {
     width: 100%;
-    height: 80px;
+    height: 75px;
     background-color: #be3144;
     justify-content: flex-end;
     align-items: center;
@@ -25,7 +27,7 @@
 }
 
 #navbar li {
-    padding: 10px 20px;
+    padding: 25px 20px;
 }
 
 #navbar li a {
@@ -39,7 +41,6 @@
 
 #navbar li:hover {
     background-color: darkslategrey;
-    padding: 10px 20px;
     cursor: pointer;
 }
 
@@ -123,7 +124,7 @@
 
 /* Contact section */
 #contact-section {
-    background-color: cadetblue;
+    background-color: rgb(2, 66, 66);
     min-height: 200px;
     margin-top: 0;
 
@@ -133,7 +134,7 @@
     text-align: center;
     padding: 20px;
     color: #207504;
-    font-size: 2.25rem;
+    font-size: 2.5rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-bottom: 0;
 }
@@ -142,36 +143,75 @@
     text-align: center;
     font-weight: bold;
     color: rgb(102, 18, 3);
-    font-family: Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, sans-serif;
+    font-size: 1.5rem;
+    font-style: oblique;
 }
+
+/* Social Links */
 
 .social-links {
-    display: block;
-    padding: 20px;
-    /* width: 80%; */
-    margin: auto;
-    text-align: center;
 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    align-items: center;
+    margin: auto;
 }
 
-.social-links .link {
-    display: inline-block;
+.link {
     padding: 10px;
-    margin: auto;
+
+}
+
+.link p {
+    color: rgb(10, 165, 165);
+    float: right;
+    margin-left: 5px;
+    font-size: 30px;
+    text-align: center;
+}
+
+.social-links a {
     text-decoration: none;
-    color: white;
-    font-size: 1.3rem;
 }
 
-.social-links .link:hover {
-    color: #011647;
+.link .fa {
+    font-size: 30px;
+    color: rgb(10, 165, 165);
+    text-align: center;
 }
 
-.social-links i {
+.social-links a:hover {
+    transform: scale(1.1);
     color: black;
-    font-size: 1.3rem;
+    text-shadow: 1px 1px 2px black;
+
 }
 
+
+/* Media query */
+
+@media only screen and (max-width: 975px) {
+    .social-links {
+        height: fit-content;
+        flex-direction: column;
+
+    }
+
+    .link p {
+        font-size: 20px;
+    }
+
+    .link .fa {
+        font-size: 20px;
+    }
+
+}
+
+/* Subscribe section */
 .subscribe {
     height: 150px;
     background-color: rgb(5, 71, 71);
@@ -218,22 +258,16 @@
     background-color: black;
     color: white;
     clear: both;
-    height: 150px;
+    height: 100px;
     text-align: center;
     padding: 30px;
     font-size: 1.4rem;
+    border-top: 2px solid red;
 }
 
 /* Media query */
 
 @media only screen and (max-width: 720px) {
-    .social-links {
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        margin: auto;
-        text-align: center;
-    }
 
     .prj-heading {
         font-size: 1.3rem;
